# QT-QML-Mini-Projects

./: README.md
MiniProjects/simple-image-viewer/: CMakeLists.txt  Images.qrc  Main.qml  hb0.qml  hbz.qml  hoverbutton.qml  main.cpp
